Wire noa client to Colyseus server and fix Vite/Vercel setup

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,4 +1,38 @@
-npm-debug.log
-node_modules
+# =========================
+# Dependencies
+# =========================
+node_modules/
+
+# =========================
+# Build output
+# =========================
+dist/
+src/dist/
+
+# =========================
+# Logs
+# =========================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 *-error.log
+
+# =========================
+# Environment files
+# =========================
+.env
+.env.*
+!.env.example
+
+# =========================
+# OS / Editor
+# =========================
+.DS_Store
+.vscode/
+.idea/
+
+# =========================
+# Temporary / misc
+# =========================
 ignore/
+.cache/
