--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@babylonjs/core": "^6.1.0",
     "babylonjs-inspector": "^5.14.1",
+    "colyseus.js": "^0.16.22",
     "noa-engine": "^0.33.0",
     "voxel-crunch": "^0.2.1"
   },
