--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@babylonjs/core": "^6.1.0",
     "@colyseus/sdk": "^0.17.25",
     "babylonjs-inspector": "^5.14.1",
+    "fastnoise-lite": "^1.1.1",
     "noa-engine": "^0.33.0",
     "voxel-crunch": "^0.2.1"
   },
