--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^6.49.0",
+    "@babylonjs/loaders": "^6.49.0",
     "@colyseus/sdk": "^0.17.25",
     "babylonjs-inspector": "^5.14.1",
     "fastnoise-lite": "^1.1.1",
